[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Skelly.gd" type="Script" id=1]
[ext_resource path="res://assets/Skeleton/Sprite Sheets/Skeleton Idle.png" type="Texture" id=2]
[ext_resource path="res://assets/Fonts/Georgia Regular font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Dialog/Keyboard Letters and Symbols.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 13 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 6.0
height = 18.0

[node name="Skelly" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_top = -24.0
margin_right = 49.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 4 )
text = "Interact (e)"
align = 1
valign = 1

[node name="SkellyBody" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="SkellyBody"]
texture = ExtResource( 2 )
hframes = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="SkellyBody/Sprite"]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SkellyBody"]
position = Vector2( -3, 4 )
shape = SubResource( 5 )

[node name="Key" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -20 )
texture = ExtResource( 4 )
hframes = 8
vframes = 14
frame = 20

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
